--- a/index.html
+++ b/index.html
@@ -66,15 +66,19 @@
       <div class="about-container">
         <div class="row">
           <div class="column left">
-            <img class="about-img" src="assets/img/images/image2.png" />
+            <div class="about-controller">
+              <img class="about-img" src="assets/img/images/image2.png" />
+            </div>
           </div>
           <div class="column right">
-            <div class="info-container">
-              <h2>Brent Faiyaz, So Far Gone</h2>
-              <p>Faiyaz began uploading his music onto SoundCloud in 2014 and moved from his hometown Columbia, Maryland to Charlotte, North Carolina before ultimately settling in Los Angeles, California to further his music career. On January 19, 2015, he released his debut single "Allure".[4] On June 1, 2016, Faiyaz released "Invite Me", the lead single from his upcoming debut EP. On September 19, 2016, his 21st birthday, the EP entitled A.M. Paradox was released and received with positive reviews from music critics. On January 26, 2017, Sonder released their debut EP into.</p>
-            </div>
-            <div class="btn-container" id="music-anchor">
-              <a class="btn">Learn More</a>
+            <div class="about-controller">
+              <div class="info-container">
+                <h2>Brent Faiyaz, So Far Gone</h2>
+                <p>Faiyaz began uploading his music onto SoundCloud in 2014 and moved from his hometown Columbia, Maryland to Charlotte, North Carolina before ultimately settling in Los Angeles, California to further his music career. On January 19, 2015, he released his debut single "Allure".[4] On June 1, 2016, Faiyaz released "Invite Me", the lead single from his upcoming debut EP. On September 19, 2016, his 21st birthday, the EP entitled A.M. Paradox was released and received with positive reviews from music critics. On January 26, 2017, Sonder released their debut EP into.</p>
+              </div>
+              <div class="btn-container" id="music-anchor">
+                <a class="btn">Learn More</a>
+              </div>
             </div>
           </div>
         </div>
