--- a/index.html
+++ b/index.html
@@ -42,6 +42,24 @@
               <li class="nav-items"><a class="nav-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
               <li class="nav-items"><a class="nav-links" href="#">Sign Up</a></li>
             </ul>
+
+            <!-- Mobile Navigation -->
+
+            <div class="mobile-menu">
+              <img onclick="mobMenu" id="mob-btn" class="mob-btn" src="assets/img/icons/pngs/dropdown_triangle.png" />
+            </div>
+            <ul class="mob-menu" id="mob-menu">
+              <li class="nav-items mob-items" id="menu-close" onclick="menuClose"><img class="nav-icons" src="assets/img/logo/pngs/srrecordings.png" /><a class="nav-links mob-links menu-closer" href="#">Close Menu > ></a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/home.png" />Home</a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/records.png" />Records</a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/music.png" />Music</a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/artists.png" />Artists</a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#"><img class="nav-icons" src="assets/img/icons/pngs/concerts.png" />Concerts</a></li>
+              <li class="nav-items mob-items"><a class="nav-links mob-links" href="#">Sign Up</a></li>
+            </ul>
+
+            <!-- End Mobile Navigation -->
+
           </div>
         </div>
 
@@ -310,6 +328,9 @@
     <!-- JQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <!-- Mobile Menu -->
+    <script src="assets/js/mob-menu.js"></script>
 
     <!-- Hero zoom on scroll effect -->
 
