--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <div class="nav-container">
           <div class="logo-container">
-            <img class="site-logo" src="assets/img/logo/pngs/srrecordings.png" />
+            <a class="logo-link" href=""><img class="site-logo" src="assets/img/logo/pngs/srrecordings.png" /></a>
           </div>
           <div class="menu-container">
             <ul class="nav">
